<resources>
    <string name="app_name">App_003</string>

    <string name="edittext_hint_primervalor">Ingrese la base</string>
    <string name="edittext_hint_segundovalor">Ingrese el exponente</string>
    <string name="edittext_hint_resultado">Resultado</string>
    <string name="button_text_potencia">Potencia</string>
    <string name="button_text_salir">Salir</string>

    <string name="edittext_hint_usuario">Ingrese usuario</string>
    <string name="edittext_hint_contrasenia">Ingrese contraseña</string>
    <string name="button_text_ingreso">INGRESAR</string>

    <string name="button_text_mostrarActivity">Mostrar Activity</string>

    <string name="button_text_llamar">Llamar</string>
    <string name="button_text_mostrarNavegador">Mostrar Navegador</string>

    <string name="menu_archivo">Archivo</string>
    <string name="menu_acercaDe">Acerca de...</string>
    <string name="menu_salir">Salir</string>

    <string name="menu_editar">Editar</string>
    <string name="menu_editar_copiar">Copiar</string>
    <string name="menu_editar_cortar">Cortar</string>
    <string name="menu_editar_pegar">Pegar</string>



</resources>